--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,18 +12,32 @@
 .earth {
     width: 100vw;
     height: 100vh;
-    background: url('../../assets/earth.jpg') no-repeat center center/cover;
+    position: relative;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+}
+
+.earth video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 /* Overlay to improve text readability */
 .overlay {
+    position: relative;
     text-align: center;
     color: white;
+    z-index: 1;
 }
+
 
 .overlay h1 {
     font-size: 3rem;
