--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,12 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
+  <video autoplay loop muted playsinline>
+    <source src="../../assets/BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
+    Your browser doesn't support the video tag.
+  </video>
   <div class="overlay">
-    <h1>Welcome to ROAMEO</h1>
-    <p>Start here. Roam everywhere. Love every mile.</p>
+    <h1>Welcome to RAOMEO</h1>
+    <p>Start Here. Roam everywhere</p>
   </div>
 </div>
 
@@ -15,6 +19,4 @@
 </div>
 
 
-
-<img src="../../assets/Logo&motto.png" alt="Logo">
 
