--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
   <video autoplay loop muted playsinline>
-    <source src="../../assets/BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
+    <source src="assets/BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
@@ -15,9 +15,5 @@
   <div class="text-content">
     <h2>Discover Your Next Adventure</h2>
     <p>Explore new destinations and experience the world like never before.</p>
-    <p>Explore new destinations and experience the world like never before.</p>
   </div>
 </div>
-
-
-
