--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,46 @@
 <footer>
-  <p>&copy; 2025 ROAMEO. All rights reserved.</p>
-  <div>
-    <a href="#">Privacy Policy</a>
-    <a href="#">Terms of Service</a>
+  <div class="footer-container">
+
+    <!--Quick Links-->
+    <div class="footer-column">
+      <h2>QUICK LINKS</h2>
+      <img src="assets\line.png">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Products</a></li>
+      </ul>
+    </div>
+
+    <!--People-->
+    <div class="footer-column">
+      <h2>TEAMMATES</h2>
+      <ul>
+        <li><a href="#">Suleiman Sabry</a></li>
+        <li><a href="#">Mahith</a></li>
+        <li><a href="#">Janidu</a></li>
+        <li><a href="#">Joshua</a></li>
+        <li><a href="#">Mindula</a></li>
+        <li><a href="#">Henuka</a></li>
+      </ul>
+      
+    </div>
+
+    <!--Contact-->
+    <div class="footer-column">
+      <h2>CONTACTS</h2>
+      <p>
+        <i class="fas fa-map-marker-alt"></i>
+        8/139 Quay Street, <br>
+        Auckland CBD 1010
+      </p>
+      <p>
+        <i class="fas fa-phone-alt"></i>
+        +64 9951 9971
+      </p>
+    </div>
   </div>
+
+  <p>2025 ROAMEO</p>
+
 </footer>
