--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -53,7 +53,7 @@
 .image-section {
     width: 100vw;
     height: 80vh;
-    background: url('../../assets/bg.jpg') no-repeat center center/cover;
+    /*background: url('../../assets/bg.jpg') no-repeat center center/cover;*/
     display: flex;
     align-items: center;
     justify-content: center;
