--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
-    <h1>Welcome to RAOMEO</h1>
+    <h1>ROAMEO</h1>
     <p>Start Here. Roam everywhere</p>
   </div>
 </div>
