Working on navbar

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
     <!--Quick Links-->
     <div class="footer-column">
       <h2>QUICK LINKS</h2>
-      <img src="assets\line.png">
+      <img src="/src/assets/images/line.png">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
@@ -15,6 +15,7 @@
     <!--People-->
     <div class="footer-column">
       <h2>TEAMMATES</h2>
+      <img src="/src/assets/images/line.png">
       <ul>
         <li><a href="#">Suleiman Sabry</a></li>
         <li><a href="#">Mahith</a></li>
@@ -29,6 +30,7 @@
     <!--Contact-->
     <div class="footer-column">
       <h2>CONTACTS</h2>
+      <img src="/src/assets/images/line.png">
       <p>
         <i class="fas fa-map-marker-alt"></i>
         8/139 Quay Street, <br>
