--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="logo">
-    <img src="../../assets/Logo&motto.png" alt="Logo">
+    <img src="/src/assets/images/Logo&motto.png" alt="Logo">
   </div>
   <ul>
     <li><a routerLink="/">Home</a></li>
