--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -13,6 +13,7 @@ nav {
     z-index: 100;
     font-family: 'Roboto', sans-serif;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    opacity: 0.6;
 }
 
 nav .logo img {
