--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,7 @@
+<div class="area">
+  
 <footer>
+  
   <div class="footer-container">
 
     <!--Quick Links-->
@@ -46,3 +49,5 @@
   <p>2025 ROAMEO</p>
 
 </footer>
+
+</div>
