--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,4 +1,5 @@
 footer {
+  position: relative;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
@@ -11,9 +12,16 @@ footer {
   width: 1000px;
   align-content: center;
   justify-content: center;
+  opacity: 0.6;
+  z-index: 1;
 
-    /* Pink radial gradient on the left side */
-    /*background: radial-gradient(circle at left, rgba(255, 0, 75, 0.4), transparent 40%) #000;*/
+    
+}
+
+.area {
+  background-color: #ffffff;
+  overflow: hidden;
+  z-index: 0;
 }
 
 .footer-container {
@@ -65,3 +73,7 @@ footer {
 .footer-column li a:hover {
   color: #00227e;
 }
+
+
+/* Pink radial gradient on the left side */
+    /*background: radial-gradient(circle at left, rgba(255, 0, 75, 0.4), transparent 40%) #000;*/
