--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
+
 <div class="area">
   
 <footer>
@@ -36,17 +39,26 @@
       <img src="/src/assets/images/line.png">
       <p>
         <i class="fas fa-map-marker-alt"></i>
-        8/139 Quay Street, <br>
-        Auckland CBD 1010
+        No 69, <br>
+        Bambalapitiya, Colombo
       </p>
       <p>
         <i class="fas fa-phone-alt"></i>
-        +64 9951 9971
+        +01 2345 6789
       </p>
     </div>
   </div>
 
-  <p>2025 ROAMEO</p>
+  <!-- BOTTOM ROW -->
+  <div class="footer-bottom">
+    <p>© 2025 ROAMEO</p>
+    <div class="social-icons">
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+    </div>
+  </div>
 
 </footer>
 
