--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,7 +5,7 @@ footer {
   top: 130px;
   left: 50%;
   transform: translate(-50%);
-  font-family: 'Roboto', sans-serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(0, 5, 7);
   color: rgb(189, 202, 255);
   padding: 40px 20px;
@@ -41,8 +41,8 @@ footer {
 }
 
 .footer-column h2 {
-  font-size: 1rem;
-  font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 100;
   margin-bottom: 15px;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -51,8 +51,8 @@ footer {
 .footer-column p,
 .footer-column li,
 .footer-column a {
-  font-size: 0.9rem;
-  line-height: 1.5;
+  font-size: 1rem;
+  line-height: 2;
 }
 
 /* For quick links list */
