--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,20 @@
+.area {
+  z-index: 0;
+  position: relative;
+  overflow: hidden;
+  padding: 300px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  
+  /* Pink radial gradient on the left side */
+  background: radial-gradient(circle at left, rgba(85, 174, 194, 0.4), transparent 20%) #000;
+}
+
 footer {
   z-index: 1; /*To set above bg*/
   position: absolute; /*Place footer on top*/
   margin: 0 auto;
-  top: 130px;
+  top: 50px;
   left: 50%;
   transform: translate(-50%);
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -16,14 +28,11 @@ footer {
   box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.2); 
 }
 
-.area {
-  z-index: 0;
-  position: relative;
-  overflow: hidden;
-  padding: 300px;
-  
-  /* Pink radial gradient on the left side */
-  background: radial-gradient(circle at left, rgba(85, 174, 194, 0.4), transparent 20%) #000;
+footer .footer-column img {
+  width: 50px;
+  height: auto;
+  margin-bottom: 15px;
+  align-content: center;
 }
 
 .footer-container {
@@ -40,10 +49,11 @@ footer {
   min-width: 200px;
 }
 
+
 .footer-column h2 {
   font-size: 1.5rem;
   font-weight: 100;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
