--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
     <!--Quick Links-->
     <div class="footer-column">
       <h2>QUICK LINKS</h2>
-      <img src="/src/assets/images/line.png">
+      <img src="/assets/images/line.png">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About Us</a></li>
@@ -21,7 +21,7 @@
     <!--People-->
     <div class="footer-column">
       <h2>TEAMMATES</h2>
-      <img src="/src/assets/images/line.png">
+      <img src="/assets/images/line.png">
       <ul>
         <li><a href="#">Suleiman Sabry</a></li>
         <li><a href="#">Mahith</a></li>
@@ -36,7 +36,7 @@
     <!--Contact-->
     <div class="footer-column">
       <h2>CONTACTS</h2>
-      <img src="/src/assets/images/line.png">
+      <img src="/assets/images/line.png">
       <p>
         <i class="fas fa-map-marker-alt"></i>
         No 69, <br>
