Working in the home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
       <h2>QUICK LINKS</h2>
       <img src="/assets/images/line.png">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="earth">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Products</a></li>
       </ul>
