--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
-  <video autoplay>
+  <video autoplay loop>
     <source src="assets/images/BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
     <h1>ROAMEO</h1>
-    <p>Start Here. Roam everywhere</p>
+    <p>Reimagining the essence of your travel experience</p>
   </div>
 </div>
 
@@ -15,5 +15,32 @@
   <div class="text-content">
     <h2>Discover Your Next Adventure</h2>
     <p>Explore new destinations and experience the world like never before.</p>
+  </div>
+</div>
+
+<div class="prototype-section">
+  <h2>Explore the Designs</h2>
+  
+  <div class="img-grid">
+
+    <!--Card 1-->
+    <div class="pt-card">
+      <img src="/assets/prototype/homeD.jpg" alt="Home screen">
+    </div>
+
+    <!--Card 2-->
+    <div class="pt-card">
+      <img src="/assets/prototype/ideaD.jpg" alt="Ideas">
+    </div>
+
+    <!--Card 3-->
+    <div class="pt-card">
+      <img src="/assets/prototype/planningD.jpg" alt="Planning">
+    </div>
+
+    <!--Card 4-->
+    <div class="pt-card">
+      <img src="/assets/prototype/sightSeeingD.jpg" alt="Sight Seeing Screen">
+    </div>
   </div>
 </div>
