--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap');
-@import url("https://use.typekit.net/ihx8dwh.css");
-
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -41,11 +38,28 @@
 
 
 .overlay h1 {
-    font-size: 3rem;
+    font-size: 5rem;
     font-weight:900;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+
+    /*Top to bottom gradient*/
+    background: linear-gradient(
+        to bottom,
+        #fff 0%, /*Whiter at top*/
+        #ccc 50%,
+        #0b0b0b 100% /*Darker in bottom*/
+    );
+
+    /*Clip gradient to text*/
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
 .overlay p {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
     margin-top: 1rem;
 }
@@ -68,6 +82,11 @@
 }
 
 .text-content p {
-    font-size: 1.3rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.5rem;
     margin-top: 10px;
+}
+
+.prototype-section {
+    color: #ccc;
 }
