--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Roboto:ital,wght@0,400;0,500;0,700;1,500&display=swap');
-@import url("https://use.typekit.net/ihx8dwh.css");
 nav {
     position: fixed;
     top: 0;
@@ -9,18 +7,24 @@ nav {
     justify-content: center; /* Center items */
     align-items: center;
     padding: 10px 30px;
-    background-color: #041540;
+    background-color: #010613;
     z-index: 100;
     font-family: 'Roboto', sans-serif;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     opacity: 0.6;
 }
 
+nav .logo {
+    position: absolute;
+    left: 140px;
+    top: 50%;
+    transform: translate(-50%);
+}
+
 nav .logo img {
     width: 120px; /* Decrease logo size */
     max-width: 100%;
     object-fit: contain;
-    margin-right: 20px; /* Add spacing between logo and menu */
 }
 
 nav ul {
@@ -39,5 +43,5 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #22fbff;
+    color: #036567;
 }
