Finished works till stats grid

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,19 +10,18 @@
   </div>
 </div>
 
-<!-- Section BELOW Earth Image -->
-<div class="image-section">
-  <div class="text-content">
-    <h2>Discover Your Next Adventure</h2>
-    <p>Explore new destinations and experience the world like never before.</p>
+<!--Projects Done Section-->
+<div class="projects-section">
+  <h2>We are an innovative<br> Trip-planning platform with a<br> dynamic approach to making travel<br> SEAMLESS & PERSONALIZED</h2>
+  <div class="projects-grid">
   </div>
 </div>
 
-<div class="prototype-section">
-  <h2>Explore the Designs</h2>
-  
-  <div class="img-grid">
 
+<!--Prototype flash cards-->
+<div class="prototype-section">
+  <h2>Explore our Design</h2>
+  <div class="img-grid">
     <!--Card 1-->
     <div class="pt-card">
       <img src="/assets/prototype/homeD.jpg" alt="Home screen">
