--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -64,27 +64,19 @@
     margin-top: 1rem;
 }
 
-/* Background Image Section BELOW earth */
-.image-section {
-    width: 90vw;
-    height: 80vh;
-    /*background: url('/assets/bg.jpg') no-repeat center center/cover;*/
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-align: center;
-    padding: 50px;
+.projects-section {
+    color: #ccc;
+    max-width: 1200px;
+    margin: auto;
+    padding: 50px 20px;
+    text-align: left;
 }
 
-.text-content h2 {
-    font-size: 2.5rem;
-}
-
-.text-content p {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.5rem;
-    margin-top: 10px;
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    columns: 2;
 }
 
 .prototype-section {
@@ -93,6 +85,11 @@
     margin: auto;
     padding: 50px 20px;
     text-align: left;
+}
+
+.prototype-section h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
 }
 
 /*Grid design*/
