--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,6 @@
   <ul>
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/product">Product</a></li>
+    <li><a routerLink="/product">Our Services</a></li>
   </ul>
 </nav>
