Working on the  stats

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,9 +12,40 @@
 
 <!--Projects Done Section-->
 <div class="projects-section">
-  <h2>We are an innovative<br> Trip-planning platform with a<br> dynamic approach to making travel<br> SEAMLESS & PERSONALIZED</h2>
-  <div class="projects-grid">
+  <h2>We are an innovative<br> 
+    Trip-planning platform with a<br> 
+    dynamic approach to making travel<br> 
+    SEAMLESS & PERSONALIZED</h2>
+
+  <!--Grid-->
+  <div class="stats-row">
+
+    <!--Card 1-->
+    <div class="stats-column">
+      <h2>100k+</h2>
+      <p>Trips Planned</p>
+    </div>
+
+    <!--Card 2-->
+    <div class="stats-column">
+      <h2>75%</h2>
+      <p>Repeat Travelers</p>
+    </div>
+
+    <!--Card 3-->
+    <div class="stats-column">
+      <h2>60%</h2>
+      <p>Missed Scenaries</p>
+    </div>
+
+    <!--Card 4-->
+    <div class="stats-column">
+      <h2>40%</h2>
+      <p>Don't Plan Well</p>
+    </div>
+
   </div>
+
 </div>
 
 
