--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -72,13 +72,62 @@
     text-align: left;
 }
 
-.projects-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    columns: 2;
+.projects-section h2 {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
+/*Container for stats row*/
+.stats-row {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #fff;
+    padding: 60px 20px;
+    position: relative;
+
+    /*Fade from left to right*/
+    opacity: 0;
+    transform: translate(-50px);
+    animation: statsFadeIn 1s forwards ease;
+}
+
+/*Each column*/
+.stats-column {
+    flex: 1;
+    text-align: center;
+    padding: 0 10px;
+    position: relative;
+    border-right: 1px solid #878787;
+}
+
+/*Remove last right border*/
+.stats-column:last-child {
+    border-right: none;
+}
+
+/* Headings for the stats */
+.stats-column h2 {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+/* Subheadings for the stats */
+.stats-column p {
+    font-size: 1rem;
+    opacity: 0.7;
+    margin: 0;
+  }
+
+  @keyframes statsFadeIn {
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+
+  /*Prototype flash cards*/
 .prototype-section {
     color: #ccc;
     max-width: 1200px;
