--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Fullscreen Background Image with Text -->
 <div class="earth">
   <video autoplay loop>
-    <source src="assets/images/BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
+    <source src="\assets\images\BlackMarble_2016_rotate_720p.mp4" type="video/mp4">
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
