--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,7 @@
     Your browser doesn't support the video tag.
   </video>
   <div class="overlay">
-    <h1>ROAMEO</h1>
-    <p>Reimagining the essence of your travel experience</p>
+    <h1>Reimagining the<br> essence of your<br> travel experience!</h1>
   </div>
 </div>
 
