Oue features page created

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,9 +1,3 @@
-<div>
-    <p>I think we should remove product section.</p>
-    <p>The sections should be</p>
-    <ul>
-        <li>Home (description, demo video, products)</li>
-        <li>About us</li>
-        <li>Contact Us</li>
-    </ul>
-</div>
+<div class="features-container">
+    <h1>Our Features</h1>
+  </div>
