--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -4,3 +4,15 @@
 * {
     font-family: 'Roboto', sans-serif; ;
 }
+
+.features-container {
+    margin-top: 170px; 
+    text-align: center;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
