--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,35 +6,65 @@
   </video>
   <div class="overlay">
     <h1>Reimagining the<br> essence of your<br> travel experience!</h1>
+
+    <!-- Sign Up Button -->
+    <button class="signup-btn">
+      Sign up <span class="arrow">↗</span>
+    </button>
+
   </div>
 </div>
+
 
 <!--Call the stat component-->
 <!--Stats Section-->
 <app-stats></app-stats>
 
+
 <!--Prototype flash cards-->
 <div class="prototype-section">
   <h2>Explore our Design</h2>
+
   <div class="img-grid">
     <!--Card 1-->
     <div class="pt-card">
-      <img src="/assets/prototype/homeD.jpg" alt="Home screen">
+      <img src="/assets/prototype/splash.jpg" alt="Home screen">
     </div>
 
     <!--Card 2-->
     <div class="pt-card">
-      <img src="/assets/prototype/ideaD.jpg" alt="Ideas">
+      <img src="/assets/prototype/homeD.jpg" alt="Ideas">
     </div>
 
     <!--Card 3-->
     <div class="pt-card">
-      <img src="/assets/prototype/planningD.jpg" alt="Planning">
+      <img src="/assets/prototype/juliet.jpg" alt="Planning">
     </div>
 
     <!--Card 4-->
     <div class="pt-card">
+      <img src="/assets/prototype/planningD.jpg" alt="Sight Seeing Screen">
+    </div>
+
+    <!--Card 5-->
+    <div class="pt-card">
+      <img src="/assets/prototype/finalised.jpg" alt="Home screen">
+    </div>
+
+    <!--Card 6-->
+    <div class="pt-card">
+      <img src="/assets/prototype/sightSeeingD.jpg" alt="Ideas">
+    </div>
+
+    <!--Card 7-->
+    <div class="pt-card">
+      <img src="/assets/prototype/discover.jpg" alt="Planning">
+    </div>
+
+    <!--Card 8-->
+    <div class="pt-card">
       <img src="/assets/prototype/sightSeeingD.jpg" alt="Sight Seeing Screen">
     </div>
+
   </div>
 </div>
