--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -50px;
+    margin-top: -90px;
 }
 
 .earth video {
@@ -124,8 +124,10 @@
 }
 
 .prototype-section h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
+    font-size: 4rem;
+    font-weight: 300;
+    margin-bottom: 40px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
 }
 
 /*Grid design*/
