--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,17 +53,17 @@
 
     <!--Card 6-->
     <div class="pt-card">
-      <img src="/assets/prototype/sightSeeingD.jpg" alt="Ideas">
+      <img src="/assets/prototype/ideaD.jpg" alt="Ideas">
     </div>
 
     <!--Card 7-->
     <div class="pt-card">
-      <img src="/assets/prototype/discover.jpg" alt="Planning">
+      <img src="/assets/prototype/sightSeeingD.jpg" alt="Planning">
     </div>
 
     <!--Card 8-->
     <div class="pt-card">
-      <img src="/assets/prototype/sightSeeingD.jpg" alt="Sight Seeing Screen">
+      <img src="/assets/prototype/discover.jpg" alt="Sight Seeing Screen">
     </div>
 
   </div>
