Creating the button

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,4 +7,10 @@
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/product">Our Services</a></li>
   </ul>
+
+  <!-- Sign Up Button -->
+  <button class="signup-btn">
+    Sign up <span class="arrow">↗</span>
+  </button>
+  
 </nav>
