--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -46,3 +46,37 @@ nav ul li a {
 nav ul li a:hover {
     color: #00a2ff;
 }
+
+
+/*Button styling*/
+.signup-btn {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 250px;
+    background-color: #000000;
+    color: #d4c4ff;
+    font-size: 24px;
+    border-color: #fff;
+    padding: 6px 12px;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.signup-btn .arrow {
+    font-size: 30px;
+    font-weight: 900;
+    display: inline-block;
+    transition: transform 0.3s ease-in-out;
+}
+  
+  .signup-btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
+}
+
+.signup-btn:hover .arrow {
+    transform: rotate(45deg);
+}
