--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -129,7 +129,7 @@
     max-width: 600px; /* Prevents excessive stretching */
     flex-shrink: 0;
     position: absolute;
-    background: rgba(255, 255, 255, 0.2);
+    background: transparent;
     padding: 20px 30px; /* Reduce padding for better fit */
     border-radius: 15px;
     color: white;
