--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
     <!-- Sign Up Button -->
     <button class="signup-btn">
-      Sign up <span class="arrow">↗</span>
+      DOWNLOAD <span class="arrow">↗</span>
     </button>
 
   </div>
