--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -52,7 +52,7 @@
     <!-- Question Row -->
     <div class="faq-question" (click)="toggleFAQ(faq)">
       <p>{{ faq.question }}</p>
-      <button>{{ faq.expanded ? '−' : '+' }}</button>
+      <button>{{ faq.expanded ? '-' : '+' }}</button>
     </div>
 
     <!-- Answer (Only visible when expanded) -->
@@ -62,8 +62,3 @@
   </div>
 </div>
 </div>
-
-
-
-
-
