--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,10 +1,10 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
 }
 
 /* Features Section */
 .features-container {
-    margin-top: 170px;
+    margin-top: 100px;
     text-align: center;
     color: white;
     font-size: 36px;
@@ -13,6 +13,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.features-container h1 {
+    font-size: 4rem; 
+    font-weight: 900;
+    margin-bottom: 15px;
+    text-align: left;
+    background: linear-gradient(to right, rgb(43, 255, 244), rgb(3, 26, 80)); /* Blue to purple gradient */
+    -webkit-background-clip: text; /* Applies the gradient to the text */
+    color: transparent; /* Makes text color transparent to show the gradient */
 }
 
 .features-table {
@@ -31,7 +41,6 @@
     margin-bottom: 5px;
     border-radius: 10px;
     cursor: pointer;
-    transition: background 0.3s;
 }
 
 .feature-row:hover {
@@ -44,6 +53,7 @@
     width: 100%;
     justify-content: space-between;
     gap: 20px; /* Keeps spacing uniform */
+    padding: 20px;
 }
 
 .feature-text h3 {
@@ -59,7 +69,7 @@
     margin: 0;
     color: #ccc;
     flex-grow: 1; /* Allows all brief descriptions to align properly */
-    text-align: left;
+    text-align: center;
     padding-left: 142px; /* Small right shift */
 }
 
@@ -79,17 +89,18 @@
 
 /* Ensure detailed description appears below brief description */
 .feature-details {
-    padding: 10px 30px;
-    margin-top: 5px;
+    padding: 20px 30px;
+    margin: 10px;
     color: #ddd;
     font-size: 17px;
     background-color: rgba(255, 255, 255, 0.05);
-    border-radius: 5px;
-    width: 80%; /* Adjust as needed */
-    max-width: 600px; /* Keeps it contained */
-    margin-left: auto; /* Pushes it to the right */
+    border-radius: 20px;
+    width: 80%;
     margin-right: 120px; /* Adds extra space to shift it further right */
+    margin-left: 120px;
     text-align: justify; /* Aligns text inside to the right */
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -120,6 +131,7 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+    background-color: #ddd;
 }
 
 /* Review Cards */
@@ -132,7 +144,7 @@
     background: transparent;
     padding: 20px 30px; /* Reduce padding for better fit */
     border-radius: 15px;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
